- Added support for rotation and move in proland_core test app.
- Added Porland terrain1 sample in OSG.
- Added terrain2 and terrain3 examples in OSG.
- Added terrain4 and terrain5 examples in OSG.
- Built the terrain preprocess example. But it is not working for the moment: crashing on start. To be investigated.
- Built lunatic_python27
- Tested minimal integration of python in lua.
- Small addition to python minimal1 test to compare python and lua speed.
- Removed data files for natural docs.
- Added test script for proland terrain exercise 1.
- Added GL canvas implementation to test Proland Terrain exercise 2. This is working as expected in this implementation (eg. proland_exercise2_gl)
- Added support for proland terrain exercise3 rendering.
- Added support for proland terrain exercise4 rendering.
- Added support for proland terrain exercise5 rendering.
- Moved proland tests in subfolder.
- Added support for terrain preprocess.
- Added atmosphere and ocean1 and 2 examples.
- Added graph1 implementation in OSG Canvas (not working properly).
- Added forest1 implementation in OSG Canvas.
- Adding dx9 and cef modules.
- Working on the CEF module implementation : adding support for DX9 interface.
- Removed bindings for RenderTarget classes (not needed) and retrieving GPU texture from DX9CEFManager.
- Addinig initial cef project
- Added first working implementation of mxcef module.
- Build minimal bindings for CEF process message support.
- Added support for Process message lua bindings.
- Added support for browser process handling of ProcessMessages.
- Preparing message handling on lua side.
- Adding implementation for post message from javascript.
- Added initial implementation for bi directional message handling system.
- Prepared extension for cef.
- Working state for CEF integration on MX15HDi.
- Added overlay_ready message.
- Added support to reload cef overlays.
- Added support to retrieve console messages from CEF browsers.